# IMAP

./: Cargo.toml  LICENSE  README.md  dummy.txt
.cargo/: config.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs
crates/client/tests/: test_client.rs  test_client.rs.rs
crates/server/: Cargo.toml
crates/server/src/: server.rs
crates/server/tests/: test_server.rs
crates/transport/: Cargo.toml
crates/transport/src/: connection.rs  packet.rs
crates/transport/tests/: test_packet.rs
scripts/: start.sh
src/protocol/: connection.rs  error.rs  message.rs  mod.rs  serialization.rs  transport.rs
tests/: all_tests.rs
