[package]
name = "imap"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
num_cpus = "1.0"
socket2 = "0.5.5"
flate2 = "1.0"
